version 0.76.01
	--warnings switch
	--quality bugfix
	Pentax K-m/K2000 support (thx to Tomasz Kos for sharing the info)
	Reading/writing AE metering mode field (K-x, K-7, K-5, K-r)
	Updating lens info database ( exiftool 8.60 )
	Reading battery fields (K-x, K-7, K-5, K-r)
	Reading max shutter speed field  (K-x, K-7, K-5, K-r)

version 0.76.00 ( 2011-07-06 )
	Support for K-r added by Vincenc Podobnik <vincenc.podobnik@gmail.com>
	Pentax K-5 support (thx to Tomasz Kos for sharing the info)
	Reading lens id fields for K-x, K-7
	Lens info (lens database source: exiftool)
	Created man pages
	gui --debug switch bugfix

version 0.75.02 ( 2011-06-30 )
	Better bracket ev handling for K-x
	Buffer handling bugfix for limited support cameras (thx Charles	Orbello for reporting and testing)
	Shutter speed bugfix
	-r switch bugfix

version 0.75.00 ( 2011-06-26 )
	buffer window bugfixes
	Removing hardwired version number from pktriggercord.glade
	Adding 1/2 EV shutter speed table to GUI
	Handling camera specific ISO tables (only base iso)
	--debug switch added
	Limited support added: istD, istDS2, istDL, K110D, K100D, K-r, K-5.

version 0.74.00 ( 2011-06-21 )
	code cleanup: eliminating id2
	Pentax K-7 support (thx Thibault Massart for testing)

version 0.73.00 ( 2011-06-11 )
	Windows port

version 0.72.02 ( 2011-05-25 )
	rpm creation
	Reading color space (K-x only)
	Writing color space
	Handling camera specific jpeg resolutions
	Code cleanup (eliminating all is_* functions)

version 0.72.00 ( 2011-05-09 )
	Support for K200D added by Jens Dreyer <jens.dreyer@udo.edu>
	Better formatting of status info in command line interface
	New command line argument: --exposure_compensation

version 0.71.02 ( 2011-04-09 )
	Reading jpeg hue (K-x only)
	Writing jpeg hue
	Handling different jpeg property level numbers
	Reading manual mode ev (K-x only)
	Writing flash mode
	Handling camera specific shutter speeds
	Command line jpeg save bugfix (was not working without specifying quality)