@@ -9,6 +9,7 @@ pktriggercord-cli - command-line Pentax DSLR tethering software
 .SY pktriggercord-cli
 .OP \-\-exposure_mode MODE
 .OP \-\-exposure_compensation VALUE
+.OP \-\-flash_exposure_compensation VALUE
 .OP \-\-iso ISO
 .OP \-\-aperture APERTURE
 .OP \-\-shutter_speed SHUTTER_SPEED
@@ -84,6 +85,11 @@ Specify shutter speed\. Value should be specified in the following format: 1/50,
 \fB\-\-exposure_correction\fR \fIVALUE\fR
 .RS 4
 Specify exposure compensation value.
+.RE
+.PP
+\fB\-\-flash_exposure_correction\fR \fIVALUE\fR
+.RS 4
+Specify flash exposure compensation value.
 .RE
 .SS Output file specification
 .PP
