@@ -6,6 +6,7 @@ version 0.76.01
 	Updating lens info database ( exiftool 8.60 )
 	Reading battery fields (K-x, K-7, K-5, K-r)
 	Reading max shutter speed field  (K-x, K-7, K-5, K-r)
+	--flash_exposure_compensation switch
 
 version 0.76.00 ( 2011-07-06 )
 	Support for K-r added by Vincenc Podobnik <vincenc.podobnik@gmail.com>
